Fix 400% zoom overflow

--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -81,7 +81,8 @@ body {
     right: 1rem;
     bottom: 1rem;
     margin: 0;
-    overflow: hidden;
+    overflow: auto;
+    max-height: 100vh;
 
     @media (min-width: $bp-small) {
       left: auto;
@@ -177,6 +178,11 @@ body {
 
     .icon-cancel-circle {
       fill: $red;
+      flex-shrink: 0;
+    }
+
+    .icon-check-circle {
+      flex-shrink: 0;
     }
   }
 
